--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@
 /src/de/oliver_arend/VVStray/StationBrowser.java
 /src/de/oliver_arend/VVStray/StationTableFormat.java
 /src/de/oliver_arend/VVStray/libs/jedit.jar
+.vscode
+/target
