--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,20 @@
                 </configuration>
             </plugin>
 
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>appassembler-maven-plugin</artifactId>
+                <version>1.10</version>
+                <configuration>
+                <programs>
+                    <program>
+                        <mainClass>de.oliver_arend.VVStray.VVStray</mainClass>
+                        <id>VVStray</id>
+                    </program>
+                </programs>
+                </configuration>
+            </plugin>
+
             <!--
                 You can run jacoco in the default profile with:
                 mvn jacoco:prepare-agent test jacoco:report
