Load and save settings from/to file, fallback to default in resources

--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,7 @@
                 <artifactId>appassembler-maven-plugin</artifactId>
                 <version>1.10</version>
                 <configuration>
+                <showConsoleWindow>false</showConsoleWindow>
                 <programs>
                     <program>
                         <mainClass>de.oliver_arend.VVStray.VVStray</mainClass>
